src/objects/Cost_Rate_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Rate__c</fullName>
        <label>Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Cost Rates Lookup</relationshipLabel>
        <relationshipName>Cost_Rates_Lookup</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Coordinator</fullName>
                </value>
                <value>
                    <fullName>Account Coordinator, Field (CAN)</fullName>
                </value>
                <value>
                    <fullName>Account Director</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Account Supervisor</fullName>
                </value>
                <value>
                    <fullName>Assistant Account Executive</fullName>
                </value>
                <value>
                    <fullName>Assistant Content Editor</fullName>
                </value>
                <value>
                    <fullName>Assistant Event Producer</fullName>
                </value>
                <value>
                    <fullName>Assistant Marketing Operations Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant Market Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant Tour Manager</fullName>
                </value>
                <value>
                    <fullName>Associate Account Director</fullName>
                </value>
                <value>
                    <fullName>Associate Content Creator</fullName>
                </value>
                <value>
                    <fullName>Associate Creative Director</fullName>
                </value>
                <value>
                    <fullName>Associate Event Producer</fullName>
                </value>
                <value>
                    <fullName>Business Information Manager</fullName>
                </value>
                <value>
                    <fullName>Business Manager</fullName>
                </value>
                <value>
                    <fullName>Business Project Manager</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Chief Content Officer</fullName>
                </value>
                <value>
                    <fullName>Conceptor</fullName>
                </value>
                <value>
                    <fullName>Content Art Director</fullName>
                </value>
                <value>
                    <fullName>Content Creator</fullName>
                </value>
                <value>
                    <fullName>Content Editor</fullName>
                </value>
                <value>
                    <fullName>Content Measurement &amp; Analytics Director</fullName>
                </value>
                <value>
                    <fullName>Content Producer</fullName>
                </value>
                <value>
                    <fullName>Content Production Accountant</fullName>
                </value>
                <value>
                    <fullName>Content Production Assistant</fullName>
                </value>
                <value>
                    <fullName>Content Production Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cost Rate Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Role__c</columns>
        <columns>Cost_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Cost Rate Lookup</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Rates Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>